fixed home-background size to align it correctly / solved closing menu issue

--- a/_scss/header/header.scss
+++ b/_scss/header/header.scss
@@ -103,14 +103,13 @@ body.scrolled .header
 	{
 		position: fixed;
 		left: -250px;
-		top: 60px;
 		padding-left: 50px;
 		background-color: #333;
 		display: flex;
 		flex-direction: column;
 		align-items:flex-start;
 		justify-content: center;
-		height: calc(100vh - 60px);
+		height: calc(100vh);
 		width: 150px;
 		z-index: 9999;
 		list-style: none;
@@ -215,14 +214,14 @@ body.scrolled .header
 
 	#mobile-nav-expand-checkbox:checked ~ .site > .mobile-nav-collapse-label
 	{
-	  width: 100%;
-	  height: calc(100vh - 60px);
-	  left: 0;
-	  opacity: 1;
-	  position: fixed;
-	  right: 0;
-	  top: 60px;
-	  background-color: rgba(0,0,0,.5);
+		z-index: 11;
+		width: 100%;
+		height: calc(100vh);
+		left: 0;
+		opacity: 1;
+		position: fixed;
+		right: 0;
+		background-color: rgba(0,0,0,.5);
 	}
 
 	#mobile-nav-expand-checkbox:checked ~ .header
@@ -238,7 +237,6 @@ body.scrolled .header
 				top: 0px;
 				transform-origin: center;
 				transform: rotate(45deg);
-				// width: 25px;
 
 			}
 
@@ -247,7 +245,6 @@ body.scrolled .header
 				top: -3px;
 				transform-origin: center;
 				transform: rotate(-45deg);
-				// width: 25px;
 			}
 		}
 	}
